# pf_localization

./: .gitmodules  help  imgui.ini  test_lustro_hex_mid70.ply  test_lustro_hex_mid_70_calib.ini
localization_gl/: CMakeLists.txt  package.xml
localization_gl/src/: localization_gl_node.cpp
src/: .cproject  .project
src/localization_gl/: CMakeLists.txt  package.xml
src/localization_gl/data/: frame_247.pcd  frame_248.pcd  p7p2_2d_clean.pcd  p7p2_2d_traversability.pcd  p7p_cloud_clean_2d_traversability.pcd  p7p_outline_CAD.pcd
src/localization_gl/include/: point_to_point_source_to_landmark_tait_bryan_cw.py  point_to_point_source_to_landmark_tait_bryan_cw_jacobian.h  point_to_point_source_to_landmark_tait_bryan_wc.py  point_to_point_source_to_landmark_tait_bryan_wc_cov.py  point_to_point_source_to_landmark_tait_bryan_wc_jacobian.h
src/localization_gl/livox_mirror/: mirror_converter.cpp  mirror_converter.h  save_mat.h  utils.cpp  utils.h  utils_io.cpp  utils_io.h
src/localization_gl/src/: cuda_exception.cpp  cuda_exception.h  localization_gl_node.cpp  pf.cpp  pf.h  rgd.cu  rgd.cuh  structs.h  test.cpp  test_cov.cpp  test_trajectory.cpp
test_data/: test_wining_particle.txt
